Bug 343156 New ATK: expose new action for images, to open long description  in a new tab patch by nian.liu at sun.com r=aaronleventhal sr=neil