accessible/src/html/nsHTMLImageAccessible.h
@@ -57,7 +57,8 @@ public:
   nsHTMLImageAccessible(nsIDOMNode* aDomNode, nsIWeakReference* aShell);
   NS_IMETHOD GetName(nsAString& _retval); 
   NS_IMETHOD GetState(PRUint32 *_retval); 
-  NS_IMETHOD GetRole(PRUint32 *_retval); 
+  NS_IMETHOD GetRole(PRUint32 *_retval);
+  NS_IMETHOD DoAction(PRUint8 index);
 
 protected:
   virtual void CacheChildren();
